gitops-main/base/tools/mongo-express/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mongo-express
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongo-express
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
