gitops-main/base/tools/mongo-express/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: mongo-express
spec:
  ingressClassName: nginx  # Bruker nginx Ingress Controller
  rules:
    - host: swwao-courses.orbit.au.dk
      http:
        paths:
          - path: /grp-7/mongo-express
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081

# Denne Ingress-fil opretter en offentlig adgang til mongo-express fra internettet.
# Når nogen skriver https://swwao-courses.orbit.au.dk/grp-7/mongo-express i deres browser, 
# dirigerer nginx dem til mongo-express servicen på port 8081.
