gitops-main/base/tools/mongo-express/allow-egress-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-all
  namespace: mongo-express
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongo-express
  policyTypes:
    - Egress
  
  egress:
    - {}

# Tillader al udgående trafik fra mongo-express pods
