gitops-main/base/tools/mongo-express/allow-ingress-from-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-nginx
  namespace: mongo-express
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongo-express
  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8081
