gitops-main/base/tools/mongo-express/deny-ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-all
  namespace: mongo-express
spec:
  podSelector: {}
  policyTypes:
    - Ingress
